# MilaMonorepo

./: .classpath  .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  build.gradle  justfile
.github/: pull_request_template.md
.github/workflows/: check-format.yml
autogen/vsr/: Cargo.toml
autogen/vsr/src/: main.rs  vsr.rs  vsr_codegen.rs  vsr_macro.rs  vsr_metadata.rs
dashboard/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
dashboard/src-tauri/: tauri.conf.json
dashboard/src-tauri/src/: lib.rs
dashboard/src/app/: dashboard-v2.css  globals.css  layout.tsx  page.tsx
mila-embedded/: .gitignore  platformio.ini
mila-embedded/scripts/: codeGen_main.py  genSensors.py  genTelemetry.py  genVitals.py  parseFile.py  simpleTest.def
mila-embedded/src/: CMakeLists.txt  programConstants.h
mila-embedded/src/CAN_to_UART/: UART_send.cpp
mila-embedded/src/LoraCommon/: ErrorStruct.h  EspHal.h  LoraDriver.cpp  LoraDriver.hpp  LoraDriverConfig.hpp  SX1262_Ext.cpp  SX1262_Ext.hpp  blastProtocolConfig.hpp
mila-embedded/src/LoraSimpleListen/: main.cpp
mila-embedded/src/LoraTestTransmit/: main.cpp
mila-embedded/src/telemetryRX/: LoraRecvAPI.cpp  LoraRecvAPI.hpp  RXBlastProtocol.cpp  RXBlastProtocol.hpp  main.cpp
mila-embedded/src/telemetryTX/: LoraErrLog.cpp  LoraErrLog.hpp  LoraTransmitAPI.cpp  LoraTransmitAPI.hpp  LoraTransmitQueue.cpp  LoraTransmitQueue.hpp  TXBlastProtocol.cpp  (+4 more)
reverse-camera/: README.md  UDPRECEIVECHUNKY.py  UDPSENDCHUNKY.py  pyproject.toml  receiver.py  sender.py
telem-dashboard/: .gitignore  build.gradle
(+48 files in other folders)
