[project]
name = "udp-video-stream"
version = "0.1.0"
description = "Example UDP video streaming with OpenCV and Typer CLI"
authors = [
    { name = "Your Name" }
]
requires-python = ">=3.9"

dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.23.0",
    "typer>=0.12.0",
    "typing-extensions>=4.0.0",
    "flask==3.1.2"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
]
